# ROST_bot

./: .gitignore  HANDOFF_README.md  README.md  ROST_기능모듈_설계서.md  readme2.md  requirements.txt
B-boxing/: d1.py  depth.npy  make_camcalib_npz.py  v7-1.py  v7.py  v7정리요약
B-boxing/camcalib_dir/: T_cam_to_work.npy  camera_matrix.npy  dist_coeffs.npy
control/: AGENTS.md  package.xml  setup.py
control/control/: gripper_drl_controller.py  moving_test.py  picture.py  pos.py  recycle.py  recycle_260220.py  recycle_demo.py  recycle_new.py
control/control/nodes/: control_client.py  control_client_demo.py  control_node.py  control_server.py  per_est_server.py  per_est_server_demo.py  recycle_demo.py
control/control/utils/: recycle_new.py
estimation/: package.xml  setup.cfg  setup.py
estimation/estimation/: main_pipeline(설명용).py  test_client.py
estimation/estimation/legacy/: add_core.py  add_service.py  estimation_ops.py  judge_core.py  judge_service.py
estimation/estimation/llm/: gemini_client.py
estimation/estimation/logic/: estimation_logic.py
estimation/estimation/nodes/: add_node.py  estimation_add_node.py  estimation_judge_node.py  estimation_node.py  estimation_server(test).py  judge_node.py  main_node.py  standalone_test_node.py
estimation/estimation/prompt/: prompt_config.py
estimation_pkgs/estimation_add/: package.xml  setup.cfg  setup.py
estimation_pkgs/estimation_add/estimation_add/: add_node.py
estimation_pkgs/estimation_judge/: package.xml  setup.cfg  setup.py
estimation_pkgs/estimation_judge/estimation_judge/: judge_node.py  utils.py
outputs/: depth.npy
perception/: package.xml  setup.py
perception/msg/: DetectedObject.msg
perception/perception/: camcalib.npz
rost_interfaces/: CMakeLists.txt  package.xml
rost_interfaces/action/: Circulation.action  circulation.action
rost_interfaces/msg/: TrashBinPoint.msg  TrashPoint.msg
rost_interfaces/srv/: EstimationToControl.srv  EstimationToControlTrashBinPoints.srv  PerceptionCoordsToEstimation.srv  PerceptionToEstimation.srv  PerceptionToEstimationBinPoints.srv  PerceptionToEstimationTrashPoints.srv  PerceptionToEstimationVisImage.srv  estimation_to_control.srv  per_est_to_control.srv  perception_to_control.srv
(+86 files in other folders)
