<?xml version="1.0"?>
<package format="3">
  <name>estimation_judge</name>
  <version>0.0.1</version>
  <description>Estimate object types from images using Gemini.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-dotenv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
